src/test/deca/context/invalid/classes/class_cycle_direct.deca
// Description :
//    Classe héritant d'elle-même directement.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 8 : Super-classe A non déclarée

class A extends A {
    int x;
}

{
}

